--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
+    "axios":"^1.9.0",
     "uuid": "^11.1.0"
   },
   "type": "module"
